[gd_scene load_steps=10 format=3 uid="uid://bi5vkb6rvejm1"]

[ext_resource type="Script" path="res://scenes/CREDITS.gd" id="1_i86nt"]
[ext_resource type="VideoStream" path="res://anim/aa.ogv" id="1_ru37e"]
[ext_resource type="FontFile" uid="uid://cqh46prfs5mg7" path="res://fonts/Emulogic-zrEw.ttf" id="1_ulgo5"]
[ext_resource type="Script" path="res://classes/LinkButton_Better.gd" id="4_qgo7b"]
[ext_resource type="Theme" uid="uid://ceiclw81oi0lp" path="res://styles/button.theme" id="5_858lg"]
[ext_resource type="SpriteFrames" uid="uid://cckxcrix50kkt" path="res://anim/player_anim.tres" id="6_jri2u"]
[ext_resource type="FontFile" uid="uid://bx4u0v38a8cmo" path="res://fonts/little-pixel.ttf" id="6_kii3g"]
[ext_resource type="Texture2D" uid="uid://dfcieqfykbn27" path="res://anim/Items_00001.png" id="8_x76fo"]

[sub_resource type="Curve" id="Curve_rsh7g"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.71579, 0.0, 0, 0]
point_count = 2

[node name="CREDITS" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_i86nt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
modulate = Color(1, 1, 1, 0.360784)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
stream = ExtResource("1_ru37e")
autoplay = true
expand = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label7" type="Label" parent="VBoxContainer2/VBoxContainer2/Control"]
texture_filter = 1
layout_mode = 2
offset_top = 4.335
offset_right = 224.0
offset_bottom = 44.335
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Prodused by
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="VBoxContainer2/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 16
text = "Nagashizar
entertainment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "-------------------"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 0.33

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Programming:"
underline = 2

[node name="Control2" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer/Control2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Art:"
underline = 2

[node name="Control3" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer/Control3"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Music?:"
underline = 2

[node name="Control4" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer/Control4"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "SFX:"
underline = 2

[node name="Control5" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer/Control5"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
underline = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer2/Control"]
texture_filter = 1
layout_mode = 2
offset_right = 110.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Zly"
underline = 1
uri = "https://twitter.com/zly_u"

[node name="Control5" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton2" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer2/Control5"]
texture_filter = 1
layout_mode = 1
offset_right = 110.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Amy supica"
underline = 1
uri = "https://www.youtube.com/@AmySupica"

[node name="Control4" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton3" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer2/Control4"]
texture_filter = 1
layout_mode = 1
offset_right = 110.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "kolificent"
underline = 1
uri = "https://www.youtube.com/@Kolificent"

[node name="Control3" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton4" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer2/Control3"]
texture_filter = 1
layout_mode = 1
offset_right = 110.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Roskuro, zly"
underline = 1
uri = "https://www.youtube.com/@roskuro"

[node name="Control2" type="Control" parent="VBoxContainer2/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LinkButton5" type="LinkButton" parent="VBoxContainer2/VBoxContainer/VBoxContainer2/Control2"]
texture_filter = 1
layout_mode = 1
offset_right = 110.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "Quyu(Zen)"
underline = 1
uri = "https://www.youtube.com/@zakurenu"

[node name="Label10" type="Label" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "-------------------"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33

[node name="Label12" type="Label" parent="VBoxContainer2/VBoxContainer3"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 8
text = "spceial thanks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/VBoxContainer3/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 234.0
offset_bottom = 83.0
size_flags_vertical = 3
mouse_filter = 2

[node name="VBox_Scroll" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer3/Control/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Link_Presset" type="LinkButton" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
offset_left = -40.0
offset_top = -24.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_ulgo5")
theme_override_font_sizes/font_size = 6
text = "Test"
underline = 1
structured_text_bidi_override = 1
script = ExtResource("4_qgo7b")

[node name="Button" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 26.0
offset_bottom = 15.0
theme = ExtResource("5_858lg")
theme_override_fonts/font = ExtResource("6_kii3g")
theme_override_font_sizes/font_size = 5
text = "back"

[node name="Sprite" type="Control" parent="."]
anchors_preset = 0
offset_left = 59.0
offset_top = 122.0
offset_right = 77.0
offset_bottom = 139.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 0, 1)
position = Vector2(8, 9)
scale = Vector2(0.03, 0.03)
sprite_frames = ExtResource("6_jri2u")
frame = 1

[node name="Sounds" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(47, 18)
emitting = false
amount = 60
lifetime = 5.0
randomness = 0.2
lifetime_randomness = 0.28
draw_order = 1
texture = ExtResource("8_x76fo")
spread = 132.37
gravity = Vector2(0, 250)
initial_velocity_max = 99.42
angular_velocity_min = -100.0
angular_velocity_max = 100.0
linear_accel_max = 100.0
radial_accel_max = 35.67
scale_amount_min = 0.01
scale_amount_max = 0.02
scale_amount_curve = SubResource("Curve_rsh7g")
hue_variation_min = -0.54
hue_variation_max = 0.55

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="scroll_started" from="VBoxContainer2/VBoxContainer3/Control/ScrollContainer" to="." method="_on_scroll_container_scroll_started"]
[connection signal="link_pressed" from="Link_Presset" to="." method="_on_link_presset_link_pressed"]
[connection signal="pressed" from="Link_Presset" to="." method="_on_link_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Sprite" to="." method="_on_sprite_mouse_entered"]
[connection signal="mouse_exited" from="Sprite" to="." method="_on_sprite_mouse_exited"]
